# expense-tracker-local-agent

./: .env.example  .gitignore  README.md  pyproject.toml
sample_data/: transactions.csv
src/finance_agent/: __init__.py  agent.py  analytics.py  cli.py  config.py  data_loader.py  llm_client.py
src/finance_agent/api/: __init__.py  app.py  routes_plaid.py  routes_summary.py  routes_ui.py
src/finance_agent/plaid/: __init__.py  client.py  schemas.py  service.py
src/finance_agent/services/: account_insights.py
src/finance_agent/storage/: __init__.py  db.py  keychain.py  models.py  repository.py
