[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-agent-local"
version = "0.1.0"
description = "Local-only finance assistant using an MLX-hosted LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=1.30.0",
  "pandas>=2.2.0",
]

[project.scripts]
finance-agent = "finance_agent.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
